# mudtem

./: LICENSE
area/: air.are  antonio.are  arachnos.are  area.lst  area77.are  area86.are  arena.are  astral.are  atlanti.are  cain.are  cannabis.are  canyon.are  castle.are  catacomb.are  chapel.are  circus.are  crystal.are  dara.are  daycare.are  dforest.are  dioses.are  draconia.are  dragonb.are  dragonl.are  dream.are  drow.are  dwarven.are  dylan.are  eastern.are  galaxy.are  gnome.are  grave.are  group.are  grove.are  gstrong.are  haon.are  haven.are  help.are  hitower.are  hood.are  (+54 more)
area/scripts/: 3018.scr
data/: badact  banco  clanes  comandos  comandos.bak  config  config~  ideas.not  last_command.txt  materiales  musica  news.not  newskills  notes.not  penal.not  peticiones  plist  puntos  razas  segundos  socials
data/bak/: banco  chang.not  chat.data  clanes  config  grupos  ideas.not  news.not  newskills  notes.not  peticiones  plist  puntos  segundos  skills  socials  tempcomandos  temprazas
data/progs/: 108.prg  110.prg  1200.prg  1215.prg  1216.prg  17000.prg  17001.prg  17002.prg  17003.prg  17004.prg  17082.prg  17342.prg  17500.prg  17501.prg  17502.prg  17503.prg  17504.prg  17505.prg  17506.prg  19001.prg  19005.prg  19006.prg  19007.prg  19008.prg  20001.prg  21001.prg  2101.prg  21019.prg  2102.prg  21020.prg  2103.prg  21033.prg  2104.prg  21088.prg  22000.prg  22700.prg  22702.prg  22710.prg  23000.prg  23001.prg  (+47 more)
doc/: Rom2.4.doc  WORLD1.txt
gods/: Acdc  Ahiru  Aragorn  Belfegor  Birdie  Dracul  Dragonblanco  Gandalf  Leatherface  Mithril
player/: Birdie  Guido
slang/: COPYING  COPYRIGHT  INSTALL.pc  INSTALL.unx  NEWS  changes.txt  configure  slang.lis
slang/autoconf/: Makefile.in  configure.in
slang/demo/: config.status  configure  configure.in  pager.c  smgtest.c
slang/doc/: slangdoc.html
slang/doc/text/: cslang.txt  slang.txt  slangfun.txt
slang/doc/tm/: Makefile  copyright.tm  cref.tm  cslang.tm  fixtex.sl  preface.tm  regexp.tm  slang.tm  slangfun.tm
slang/doc/tm/rtl/: array.tm  debug.tm  dir.tm  eval.tm  import.tm  info.tm  misc.tm  ospath.tm  posio.tm  posix.tm  stdio.tm  strops.tm  struct.tm  time.tm  type.tm
slang/doc/tm/tools/: Makefile  sl2tm.c  tm2txt.c
slang/examples/: assoc.sl  sort.sl
slang/modules/: Makefile  README  newt-module.c  smg-module.c  smg.sl
slang/slsh/: Makefile  README  slsh.c
slang/slsh/lib/: slsh.rc
slang/slsh/scripts/: htmlstrip  ls  lsrpm
slang/src/: DESCRIP.MMS  Makefile.in  VMSMAKE.COM  _slang.h  calc.c  calc.sl  config.hin  keywhash.c  modules.unx  pcconf.c  sl-feat.h  slang.c  slang.h  slarith.c  slarith.inc  slarray.c  slarrfun.c  slarrfun.inc  slarrmis.c  slassoc.c  slbstr.c  slclass.c  slcmd.c  slcmplex.c  slcompat.c  slconfig.h  slcurses.c  slcurses.h  sldisply.c  sldostty.c  slerr.c  slerrno.c  slfile.c  slgetkey.c  slimport.c  slintall.c  slistruc.c  slkeymap.c  slkeypad.c  sllimits.h  (+38 more)
slang/src/curses/: Makefile
slang/src/mkfiles/: README  makefile.all
slang/src/test/: Makefile  anytype.sl  arith.sl  array.sl  arrmult.sl  assoc.sl  nspace.sl  pack.sl  posixio.sl  sltest.c  stdio.sl  strops.sl  struct.sl  syntax.sl
slang/src/util/: bcdump.c  keywords.lis  perfhash.c
src/: Makefile  Makefile.Win32  Makefile.aix  Makefile.am  Makefile.dos  Makefile.linux  act_comm.c  act_enter.c  act_info.c  act_info.h  act_move.c  act_obj.c  act_wiz.c  alias.c  allocfunc.h  arena.c  arena.h  auction.h  ban.c  ban.h  bit.c  clan.c  clan.h  cmdedit.c  comm.c  comm.h  command.h  comp  const.c  crc.c  crc.h  db.c  db.h  db2.c  dice.c  economy.c  effects.c  entity.c  entity.h  envy.h  (+76 more)
src/CVS/: Entries  Repository
src/include/: extkword.h  numcnvrt.h  pi.h  round.h  snip_str.h  snipmath.h  sniptype.h
src/include/CVS/: Entries  Repository
src/var/: act_info  act_new  aggr_update  align  birth.c  clanrecall  cmdedit  comm  custom  damage  fpl.c  fplintf  fpltemp  gain  hometown  hometown~  hunt  mpedit  newrecall  objupdate  oedit  olc.c  olc_act.c  petic  quaff  random  recall  redit  saveraces  second  shutdowm  sk  skedit  sobrecargar  social  temp
src/var/CVS/: Entries  Repository  Root
