bin_PROGRAMS =	bdm
bdm_SOURCES =	act_comm.c act_enter.c act_info.c act_move.c act_obj.c \
		act_wiz.c alias.c arena.c ban.c bit.c clan.c cmdedit.c \
		comm.c const.c db.c db2.c dice.c economy.c effects.c \
		entity.c eval.c events.c fight.c flags.c gedit.c \
		handler.c healer.c hedit.c hunt.c interp.c language.c \
		lookup.c magic.c magic2.c mazegen.c mem.c mob_cmds.c \
		mob_prog.c mpedit.c music.c note.c olc.c olc_act.c \
		olc_save.c plist.c poker.c puntaje.c quest.c raedit.c \
		random.c readconf.c recycle.c remort.c save.c scan.c \
		screen.c script.c sedit.c skedit.c skills.c slang.c \
		smart.c special.c string.c tables.c tablesave.c trap.c \
		update.c wizutil.c
INCLUDES =	-I../slang/src -I./include
DEFS =		-DMUD_SLANG -DUSAR_MACROS
